@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-14T00:54:57Z",
+  "timestamp" : "2024-10-15T00:53:55Z",
   "count_outdated" : 1333,
   "uniques_outdated" : 858,
-  "count" : 1337,
-  "uniques" : 862,
+  "count" : 1338,
+  "uniques" : 863,
   "clones" : [
     {
       "timestamp": "2024-10-01T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
